# fireworks_schema

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
fireworks_schema/: __init__.py  json_schema.py
fireworks_schema/schema/: fwconfig.json  fworker.json  launchpad.json  pytask.json
fireworks_schema/tests/: FW_config.yaml  __init__.py  fw_config_path.py  fw_custom_test.py  fw_schema_test.py  fw_serializers_test.py  integer_array.py
fireworks_schema/tests/samples/custom/: integer_array.json  integerarray.json  refschema.json
fireworks_schema/tests/samples/firetask/: pytask_no_inputs.json  pytask_non-unique_inputs.json
fireworks_schema/tests/samples/fwconfig/: fwconfig.json
fireworks_schema/tests/samples/fworker/: fworker_null.json
fireworks_schema/tests/samples/fworker-invalid/: fworker_no_category.json  fworker_no_name.json  fworker_no_query.json
fireworks_schema/tests/samples/launchpad/: launchpad_ssl.json  launchpad_ssl_x509.json  launchpad_uri.json
tests/: fw_config.yaml  fw_schema_test.py  fw_serializers_test.py
