[metadata]
name = fireworks-schema
version = 1.3.0
author = Ivan Kondov
author_email = ivan.kondov@kit.edu
description = JSON Schema for FireWorks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = workflow system, json schema, fireworks
license = BSD-3-Clause
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering
project_urls =
    Homepage = https://github.com/ikondov/fireworks_schema
    Download = https://pypi.org/project/fireworks-schema/#files
    Source Code = https://github.com/ikondov/fireworks_schema
    Bug Reports = https://github.com/ikondov/fireworks_schema/issues

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
install_requires =
    jsonschema>=4.0.0
    fireworks>=2.0.2
    pymongo>=3.9.0
    semantic-version

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    fireworks_schema.tests*

[options.package_data]
fireworks_schema =
    schema/*.json

[flake8]
max-line-length = 120
exclude=__init__.py
